--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,28 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+/* avenir roman */
+@font-face {
+  font-family: 'Avenir';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://s3.us-west-2.amazonaws.com/www.duyou.com.mx/assets/fonts/Avenir/AvenirLTStd-Roman.woff2) format('woff2');
+}
+/* avenir book */
+@font-face {
+  font-family: 'Avenir Book';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://s3.us-west-2.amazonaws.com/www.duyou.com.mx/assets/fonts/Avenir/AvenirLTStd-Book.woff2) format('woff2');
+}
+/* avenir black */
+@font-face {
+  font-family: 'Avenir Black';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://s3.us-west-2.amazonaws.com/www.duyou.com.mx/assets/fonts/Avenir/AvenirLTStd-Black.woff2) format('woff2');
+}
